# auto_analyze

./: README.md  Untitled.ipynb  Untitled1.ipynb  pyproject.toml  setup.py  tsconfig.json  tsconfig.tsbuildinfo
jupyter_auto_analyze/: __init__.py  _version.py
jupyter_auto_analyze/labextension/: package.json
jupyter_auto_analyze/labextension/schemas/@jupyterlab/auto-analyze/: package.json.orig  plugin.json  settings.json
lib/: index.js  server.d.ts  server.js  types.d.ts
src/: index.ts  server.ts  types.ts
style/: base.css
