[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_auto_analyze"
description = "JupyterLab extension for autonomous data analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Your Name" }
]
dependencies = [
    "jupyterlab>=4.0.0,<5.0.0",
]
dynamic = ["version"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.build.targets.wheel]
packages = ["jupyter_auto_analyze"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_auto_analyze/labextension" = "share/jupyter/labextensions/@jupyterlab/auto-analyze"
"install.json" = "share/jupyter/labextensions/@jupyterlab/auto-analyze/install.json"